[VuTH] Fix bug + dark mode

--- a/bigbluebutton-html5/public/stylesheets/re-style/variables.css
+++ b/bigbluebutton-html5/public/stylesheets/re-style/variables.css
@@ -189,7 +189,7 @@
 	--bg-06-dark: #303338;
 	--bg-green-dark: #284A37;
 	--bg-orange-dark: #735B50;
-	--bg-red-dark: #5F4047;
+	--bg-red-dark: #A65C6B;
 	--bg-popup-blur-dark: rgba(27, 27, 27, 0.6);     /* #1B1B1B at 60% */
 	--bg-blur-dark: rgba(0, 0, 0, 0.2);              /* #000000 at 20% */
 
